objects/Product_Upgrade__c.object
<CustomObject>
    <description>Product Upgrade Paths</description>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Product_CPM_ID__c</fullName>
        <description>Not for display. Reference field only.</description>
        <inlineHelpText>Not for display. Reference field only.</inlineHelpText>
        <label>Child Product CPM ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Upgrade (Child Product)</relationshipLabel>
        <relationshipName>Product_Upgrade1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product_CPM_ID__c</fullName>
        <description>Not for display.  Reference field only.</description>
        <inlineHelpText>Not for display.  Reference field only.</inlineHelpText>
        <label>Parent Product CPM ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Upgrade</relationshipLabel>
        <relationshipName>Product_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Product Upgrade</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Quantity__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Child_Product_CPM_ID__c</columns>
        <columns>Parent_Product_CPM_ID__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PUP-{00000}</displayFormat>
        <label>Product Upgrade</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Upgrade Paths</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>